Fixed content alignme nt

--- a/web/containers/DynamicContent/_dynamic-content.scss
+++ b/web/containers/DynamicContent/_dynamic-content.scss
@@ -84,7 +84,7 @@
   min-height: 100%;
   &__body {
     min-height: 100%;
-    display: inline-block;
+    display: block;
     width: 100%;
   }
   .tp-progress {
